# psiwatch

./: .gitignore  DEVLOG.md  LICENSE  README-19.md  README-7.md  README-8.md  README.md  drift_report.html  drift_report.json  psiwatch.lock.json  psiwatch.lock.json.seen.json  pyproject.toml  test_full.py  test_output.txt  test_v0_12_0_fixes.py  test_v11.txt
docs/: java-interop.md
docs/examples/: README.md
docs/examples/java-example/: DriftCheck.java  new.csv
docs/examples/js-example/: drift-check.js  package.json  train.csv
samples/: new.csv  train.csv
src/psiwatch/: __init__.py  adapt.py  analyzer.py  analyzer.py.save  cli.py  config.py  loader.py  locker.py  reporter.py  trend.py  updater.py  viz.py  watcher.py  webhook.py
src/psiwatch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_analyzer.py  test_config.py  test_locker.py  test_reporter.py  test_trend.py  test_updater.py  test_webhook.py
tmp_test_files/: big.lock.json  legacy.lock.json  test.lock.json  xss_test.html
