[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "psiwatch"
version = "0.11.0"
description = "A zero-dependency Python library and CLI for detecting dataset drift in ML pipelines."
authors = [{ name = "Tharun", email = "neetibyaevra@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = []

keywords = [
    "data drift", "dataset drift", "ml monitoring", "machine learning",
    "data science", "psi", "population stability index", "csv",
    "pandas", "dataframe", "statistics", "covariate shift"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]

[project.urls]
Homepage = "https://github.com/tharunstryker/psiwatch"
Repository = "https://github.com/tharunstryker/psiwatch"
"Bug Tracker" = "https://github.com/tharunstryker/psiwatch/issues"
Changelog = "https://github.com/tharunstryker/psiwatch/blob/main/DEVLOG.md"

[project.scripts]
psiwatch = "psiwatch.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
